--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "revelation"]
 	path = revelation
 	url = https://github.com/DrCracket/awesome-revelation.git
+[submodule "net_widgets"]
+	path = net_widgets
+	url = https://github.com/pltanton/net_widgets.git
